# config

./: .Rprofile  .aliases.zsh  .bash_aliases  .bashrc  .ghci  .gitconfig  .gitignore  .gitignore_global  .inputrc  .profile  .pylintrc  .tmux.conf  .vimrc  .zshrc
.aws/: config
.aws.hidden/: config
.aws.vault/: config
.boot/: boot.properties  profile.boot
.clojure/: deps.edn
.config/xfce4/terminal/: terminalrc
.emacs.d/: init.el
.emacs.d/config/: settings-c++.el  settings-cedet.el  settings-clojure.el  settings-company.el  settings-custom.el  settings-cvs.el  settings-ess.el  settings-flycheck.el  settings-globals.el  settings-haskell.el  settings-helm.el  settings-java.el  settings-latex.el  settings-lisp.el  settings-lua.el  settings-misc.el  settings-octave.el  settings-org.el  settings-packages.el  settings-projectile.el  settings-python.el  settings-scala.el
.emacs.d/init/: constants.el  core.el  functions-python.el  functions.el  hs-hoogle.el  init-agda.el  init-antlr.el  init-clojure.el  init-company.el  init-constants.el  init-coq.el  init-core.el  init-docview.el  init-elisp.el  init-elixir.el  init-erlang.el  init-ess.el  init-flycheck.el  init-fsharp.el  init-functions.el  init-go-lsp.el  init-go.el  init-groovy.el  init-haskell-intero.el  init-haskell.el  init-helm.el  init-html.el  init-idris.el  init-javascript.el  init-jinja2.el  init-jsx.el  init-kotlin.el  init-latex.el  init-magit.el  init-maxima.el  init-org.el  init-packages.el  init-plantuml.el  init-projectile.el  init-purescript.el  (+12 more)
.emacs.d/snippets/makefile-gmake-mode/: help-target
.emacs.d/snippets/makefile-mode/: help-target
.emacs.d/snippets/org-mode/: clj-block  emacs-lisp-block  gnuplot-block  haskell-block  haskell_block  http-block  ipython-block  ipython_block  js-block  sh-block  (+8 more)
.ipython/profile_default/: ipython_config.py  ipython_kernel_config.py  startup.ipy
.ipython/profile_dev/: ipython_config.py  ipython_kernel_config.py
.jupyter/custom/: custom.css  custom.js
.pyenv.overrides/: airflow  apparatus  envsubst  format-sql  gettext  ipython  jedi-language-server  jupyter-console  jupyter-nbconvert  jupyter-nbextension  jupyter-run  jupyter-serverextension  jupyter-troubleshoot  jupyter-trust  mprof  patchelf  wish
.pyenv/overrides/: aws  aws_completer  aws_zsh_completer.sh  jupyter  jupyter-bundlerextension  jupyter-kernel  jupyter-kernelspec  jupyter-migrate  jupyter-notebook  jupyter-qtconsole
.ssh/: config
.tmuxinator/: druid.yml  lemonpi-it-test.yml  lemonpi-products-dev.yml  lemonpi-products.yml  monitor.yml
.vim/ftplugin/: code.vim  csv.vim  python.vim  rst.vim  scala.vim  snippet.vim  tex.vim  text.vim  vim.vim  xml.vim
.vim/init/: initialization.vim
.xmonad/: .dir-locals.el  build  stack.yaml  xmonad-exe.cabal  xmonad.hs
.xmonad/lib/: Colors.hs  RecentCommands.hs  Solarized.hs
.xmonad/src/: Local.hs  Main.hs  Track.hs
direnv/: direnvrc
doom/: config.el  config.org  custom.el  em  init.el  packages.el
emacs-local/journal/: config.el
oh-my-zsh/: core.zsh  emacs.zsh  javascript.zsh  patches.zsh  perl.zsh  python.zsh  tools.zsh  wpp.zsh
oh-my-zsh/themes/: custom.zsh-theme
xmonad/: .dir-locals.el  build  cabal.project  xmonadrc.cabal
xmonad/src/: Actions.hs  Colors.hs  DBusConfig.hs  Main.hs  RecentCommands.hs  Utils.hs
(+11 files in other folders)
