name:                xmonad-exe
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Bart Frenk
maintainer:          bart.frenk@gmail.com
copyright:           2017 Bart Frenk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  other-modules:       Colors
                       Local
                       RecentCommands
                       Track
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
                     , dbus
                     , HaXml
                     , network-uri
                     , mtl
                     , time
                     , tagsoup
                     , utf8-string
                     , xmonad
                     , xmonad-contrib
                     , process
                     , split
  default-extensions: RecordWildCards
