cabal-version:  1.12
name:           xmonadrc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/exec-engine#readme>
homepage:       https://github.com/bartfrenk/xmonad#readme
bug-reports:    https://github.com/bartfrenk/xmonad/issues
author:         Bart Frenk
maintainer:     bart.frenk@gmail.com
copyright:      Bart Frenk
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/bartfrenk/xmonad

executable xmonad
  main-is: Main.hs
  other-modules:
      Colors
    , Actions
    , RecentCommands
    , Track
    , Paths_xmonadrc
  hs-source-dirs:
      src
  default-extensions:
      RecordWildCards
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      HaXml
    , base
    , containers
    , dbus
    , filepath
    , mtl
    , network-uri
    , process
    , split
    , tagsoup
    , time
    , utf8-string
    , xmonad
    , xmonad-contrib
  default-language: Haskell2010
